--- a/Love/res/values/styles.xml
+++ b/Love/res/values/styles.xml
@@ -1,20 +1,50 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!--
-        Base application theme, dependent on API level. This theme is replaced
-        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
-    -->
     <style name="AppBaseTheme" parent="android:Theme.Light.NoTitleBar">
-        <!--
-            Theme customizations available in newer API levels can go in
-            res/values-vXX/styles.xml, while customizations related to
-            backward-compatibility can go here.
-        -->
     </style>
 
-    <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
-        <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
 
+    <style name="UserName">
+        <item name="android:textColor">@color/TextBaseColor</item>
+        <item name="android:textSize">25sp</item>
+        <item name="android:singleLine">true</item>
+    </style>
+    
+    <style name="Signature">
+        <item name="android:textColor">@color/White</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:singleLine">true</item>
+    </style>
+    
+    <style name="Age">
+        <item name="android:textColor">@color/White</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:drawablePadding">10dp</item>
+    </style>
+    
+    <style name="AttentionCount">
+        <item name="android:textColor">@color/White</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:gravity">center</item>
+    </style>
+    
+    <style name="AttentionTitle">
+        <item name="android:textColor">@color/White</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:singleLine">true</item>
+    </style>
+    
+    <style name="MenuText">
+        <item name="android:textColor">@color/TextBaseColor</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:padding">10dp</item>
+        <item name="android:drawablePadding">10dp</item>
+        <item name="android:gravity">right|center_vertical</item>
+        <item name="android:drawableBottom">@drawable/list_divider</item>
+    </style>
 </resources>
