--- a/Love/res/values/color.xml
+++ b/Love/res/values/color.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="TitleBarBg">#dddddd</color>
     <color name="Black">#000000</color>
     <color name="White">#FFFFFF</color>
     <color name="TextBaseColor">#00DAD3</color>
     <color name="BackBaseColor">#F5F5F5</color>
+    <color name="BroadcastBg">#dddddd</color>
 </resources>
