--- a/Love/res/values/styles.xml
+++ b/Love/res/values/styles.xml
@@ -5,6 +5,17 @@
 
     <style name="AppTheme" parent="AppBaseTheme">
     </style>
+    
+    <!-- Common values -->
+    
+    <style name="TitleText">
+        <item name="android:textColor">@color/Black</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:gravity">center</item>
+    </style>
+    
+    <!-- Values for left menu -->
 
     <style name="UserName">
         <item name="android:textColor">@color/TextBaseColor</item>
@@ -47,4 +58,26 @@
         <item name="android:gravity">right|center_vertical</item>
         <item name="android:drawableBottom">@drawable/list_divider</item>
     </style>
+    
+    <!-- Values for broadcast -->
+    <style name="ItemTextDate">
+        <item name="android:textColor">@color/Black</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:gravity">center</item>
+    </style>
+    <style name="ItemTextSoundName">
+        <item name="android:textColor">@color/Black</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:gravity">bottom</item>
+    </style>
+    <style name="ItemTextCount">
+        <item name="android:textColor">@color/Black</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:gravity">left</item>
+    </style>
+    
+    
 </resources>
