--- a/Love/res/layout/tabselector_group.xml
+++ b/Love/res/layout/tabselector_group.xml
@@ -9,6 +9,7 @@
         android:layout_width="@dimen/btn_size"
         android:layout_height="@dimen/btn_size" 
         android:background="@drawable/btn_contact_group_selector"
+        android:clickable="false"
         android:contentDescription="@string/app_name"
         />
 </LinearLayout>
