--- a/Love/res/layout/tabselector_settings.xml
+++ b/Love/res/layout/tabselector_settings.xml
@@ -3,12 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="right" >
+    android:gravity="center_horizontal" >
     <ImageButton
         android:id="@+id/btn_contact_settings"
         android:layout_width="@dimen/btn_size"
         android:layout_height="@dimen/btn_size" 
         android:background="@drawable/btn_contact_settings_selector"
+        android:clickable="false"
         android:contentDescription="@string/app_name"
         />
 </LinearLayout>
