--- a/Love/res/layout/tabselector_single.xml
+++ b/Love/res/layout/tabselector_single.xml
@@ -2,12 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:gravity="center_horizontal" >
     <ImageButton
         android:id="@+id/btn_contact_single"
         android:layout_width="@dimen/btn_size"
         android:layout_height="@dimen/btn_size"
         android:background="@drawable/btn_contact_single_selector"
+        android:clickable="false"
         android:contentDescription="@string/app_name"
         />
 </LinearLayout>
