--- a/Love/res/layout/activity_person.xml
+++ b/Love/res/layout/activity_person.xml
@@ -48,7 +48,7 @@
         <Button
             android:id="@+id/btn_album"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/person_button_height"
             android:layout_weight="1.0"
             android:layout_margin="@dimen/person_button_margin"
             style="@style/PersonButton"
@@ -56,7 +56,7 @@
         <Button
             android:id="@+id/btn_event"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/person_button_height"
             android:layout_weight="1.0"
             android:layout_margin="@dimen/person_button_margin"
             style="@style/PersonButton"
@@ -116,7 +116,7 @@
                     style="@style/Age"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:drawableRight="@drawable/mm"
+                    android:drawableRight="@drawable/ic_sex_male"
                     android:text="@string/testage" />
             </LinearLayout>
         </LinearLayout>
