--- a/Love/res/values/dimens.xml
+++ b/Love/res/values/dimens.xml
@@ -10,7 +10,8 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     
-    
+    <!-- Common Values  -->
+    <dimen name="btn_size">30dp</dimen>
     
     <!--      Values for left dashboard    -->
     <dimen name="left_linear_padding_top">40dp</dimen>
@@ -22,8 +23,7 @@
     <dimen name="button_margin">5dp</dimen>
     
     <!--     Values for the broadcast     -->
-    <dimen name="item_space">20dp</dimen>
-    <dimen name="btn_size">30dp</dimen>
+    <dimen name="item_space">20dp</dimen>  
     <dimen name="item_padding">12dp</dimen>
     <dimen name="avatar_size_broadcast">50dp</dimen>
     <dimen name="item_linear_padding">18dp</dimen>
@@ -38,6 +38,7 @@
 	<dimen name="person_linear_padding">50dp</dimen>
 	<dimen name="person_button_margin">10dp</dimen>
 	<dimen name="person_linear_botom_padding">20dp</dimen>
+	<dimen name="person_button_height">35dp</dimen>
 	
 	<!-- Values for the person edit -->
 	<dimen name="person_edit_linear_padding">20dp</dimen>
@@ -46,4 +47,16 @@
 	<dimen name="person_edit_edit_space">20dp</dimen>
 	<dimen name="person_edit_age_width">100dp</dimen>
 	<dimen name="person_edit_text_height">35dp</dimen>
+	<dimen name="person_edit_sex_size">30dp</dimen>
+	
+	<!-- Values for the event -->
+	<dimen name="event_tab_height">45dp</dimen>
+	<dimen name="event_tabhost_margin_top">30dp</dimen>
+	<dimen name="event_tabhost_margin_left">15dp</dimen>
+	<dimen name="event_tabhost_margin_right">15dp</dimen>
+	<dimen name="event_list_item_padding">10dp</dimen>
+	<dimen name="event_list_item_height">100dp</dimen>
+	<dimen name="event_list_item_avatar_size">40dp</dimen>
+	<dimen name="event_list_item_name_width">60dp</dimen>
+	<dimen name="event_list_item_space">5dp</dimen>
 </resources>
