git-svn-id: http://192.168.0.201:8000/svn/wedding2/Android@1378 e014ceee-942d-7345-a814-9ef81cb11927

--- a/Love/res/layout/activity_event.xml
+++ b/Love/res/layout/activity_event.xml
@@ -62,7 +62,7 @@
  
                 <fragment
                     android:id="@+id/event_organized"
-                    android:name="cc.ccme.love.event.EventBaseFragment"
+                    android:name="cc.ccme.love.event.BaseEventFragment"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" />
 
