--- a/Love/res/layout/fragment_contact.xml
+++ b/Love/res/layout/fragment_contact.xml
@@ -19,7 +19,7 @@
                 android:id="@android:id/tabs"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/TitleBarBg"
+                android:background="@drawable/bg_title_bar"
         		android:padding="10dp" 
                 android:divider="@null" >
             </TabWidget>
