--- a/Love/res/layout/list_item_event_base.xml
+++ b/Love/res/layout/list_item_event_base.xml
@@ -1,67 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/event_list_item_height"
-    android:padding="@dimen/event_list_item_padding"
-     >
-       <TextView
-           android:id="@+id/host_first"
-           android:layout_width="@dimen/event_list_item_name_width"
-           android:layout_height="wrap_content"
-           android:layout_alignParentRight="true"
-           android:layout_alignParentBottom="true"
-           style="@style/EventListItemNameText"
-           android:text="@string/testname"
-           />
-       <TextView
-           android:id="@+id/host_second"
-           android:layout_toLeftOf="@id/host_first"
-           android:layout_width="@dimen/event_list_item_name_width"
-           android:layout_height="wrap_content" 
-           android:layout_alignParentBottom="true"
-           style="@style/EventListItemNameText"
-           android:text="@string/testname"
-           />
-       
-       <LinearLayout
-           android:layout_toLeftOf="@id/host_second"
-           android:layout_height="match_parent"
-           android:layout_width="match_parent"
-           android:orientation="vertical"
-           android:gravity="bottom"
-           >
-           <LinearLayout
-               android:layout_width="match_parent"
-               android:layout_height="wrap_content"
-               android:orientation="horizontal">
-               <TextView
-                   android:id="@+id/event_title"
-                   android:layout_width="0dp"
-                   android:layout_height="wrap_content"
-                   android:text="@string/testtitle"
-                   style="@style/EventListItemTitleText"
-                   android:layout_weight="1.0"/>
-               <TextView
-                   android:id="@+id/event_privacy"
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:text="@string/event_privacy_private"
-                   style="@style/EventListItemPrivacyText"
-                    />
-               </LinearLayout>
-           <TextView
-               android:id="@+id/event_date"
-               android:layout_width="match_parent"
-               android:layout_height="wrap_content"
-               android:layout_marginTop="@dimen/event_list_item_space"
-               style="@style/EventListItemDateText"
-               android:text="@string/testdate2"/>
-           <TextView
-               android:id="@+id/event_location"
-               android:layout_width="match_parent"
-               android:layout_height="wrap_content"
-               android:layout_marginTop="@dimen/event_list_item_space"
-               style="@style/EventListItemLocationText"
-               android:text="@string/testlocation"/>
-           </LinearLayout>
-</RelativeLayout>
+    android:layout_height="wrap_content"
+    android:orientation="vertical" >
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/event_list_item_height"
+        android:padding="@dimen/event_list_item_padding"
+        android:background="@drawable/bg_list_event_selector" >
+
+        <TextView
+            android:id="@+id/host_first"
+            style="@style/EventListItemNameText"
+            android:layout_width="@dimen/event_list_item_name_width"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:text="@string/testname" />
+
+        <TextView
+            android:id="@+id/host_second"
+            style="@style/EventListItemNameText"
+            android:layout_width="@dimen/event_list_item_name_width"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_toLeftOf="@id/host_first"
+            android:text="@string/testname" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_toLeftOf="@id/host_second"
+            android:gravity="bottom"
+            android:orientation="vertical" >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" >
+
+                <TextView
+                    android:id="@+id/event_title"
+                    style="@style/EventListItemTitleText"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1.0"
+                    android:text="@string/testtitle" />
+
+                <TextView
+                    android:id="@+id/event_privacy"
+                    style="@style/EventListItemPrivacyText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/event_privacy_private" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/event_date"
+                style="@style/EventListItemDateText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/event_list_item_space"
+                android:text="@string/testdate2" />
+
+            <TextView
+                android:id="@+id/event_location"
+                style="@style/EventListItemLocationText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/event_list_item_space"
+                android:text="@string/testlocation" />
+        </LinearLayout>
+    </RelativeLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/event_list_item_margin"
+        android:text="" />
+
+</LinearLayout>
