--- a/Love/res/values/styles.xml
+++ b/Love/res/values/styles.xml
@@ -263,4 +263,54 @@
         <item name="android:drawableRight">@drawable/radio_selector</item>
         <item name="android:paddingLeft">30dp</item>
     </style>
+    
+    <!-- Values for event detail -->
+    <style name="EventDetailName">
+        <item name="android:textSize">16sp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/TextBaseColor</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:paddingTop">5dp</item>      
+    </style>
+    <style name="EventDetailTitleText">
+        <item name="android:textSize">20sp</item>
+        <item name="android:gravity">left</item>
+        <item name="android:textColor">@color/Gray</item>
+        <item name="android:singleLine">true</item>
+    </style>
+    
+    <style name="EventDetailDateText">
+        <item name="android:textSize">15sp</item>
+        <item name="android:gravity">left</item>
+        <item name="android:textColor">@color/Gray</item>
+        <item name="android:drawableLeft">@drawable/ic_event_detail_date</item>
+        <item name="android:drawablePadding">10dp</item>
+        <item name="android:singleLine">true</item>
+    </style>
+    <style name="EventDetailLocationText">
+        <item name="android:textSize">15sp</item>
+        <item name="android:gravity">left</item>
+        <item name="android:textColor">@color/Gray</item>
+        <item name="android:drawableLeft">@drawable/ic_event_detail_location</item>
+        <item name="android:drawablePadding">10dp</item>
+        <item name="android:singleLine">true</item>
+    </style>
+    <style name="EventDetailJoiner">
+        <item name="android:textSize">17sp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@drawable/color_common_text_selector</item>
+        <item name="android:singleLine">true</item>
+    </style>
+    <style name="EventDetailDetail">
+        <item name="android:textSize">16sp</item>
+        <item name="android:gravity">left|top</item>
+        <item name="android:textColor">@color/Gray</item>
+        <item name="android:singleLine">false</item>
+    </style>
+    <style name="EventDetailActivity">
+        <item name="android:textSize">20sp</item>
+        <item name="android:gravity">left</item>
+        <item name="android:textColor">@color/Gray</item>
+        <item name="android:singleLine">true</item>
+    </style>
 </resources>
